fixes to spacing sponsor

--- a/styles/Sponsor.css
+++ b/styles/Sponsor.css
@@ -1610,6 +1610,7 @@ h4{
 
     .last-feat{
         float: left;
+        margin-top: 10px;
     }
     
     .logo img{
